<resources>
    <string name="app_name"> Searp</string>
    <string name="folder_name">Searp</string>
    <string name="search_title">Feed Search</string>
    <string name="not_connected_internet">No Internet connection</string>
    <string name="check_connection">Check your connection again</string>
    <string name="search_hint">Search keyword</string>
    <string name="not_found">Not Found</string>
    <string name="phrase_taken">Taken on</string>
    <string name="phrase_posted">Posted on</string>
    <string name="phrase_tags">Tags</string>
    <string name="no_title">No Title</string>
    <string name="drawer_item_location">Location</string>
    <string name="drawer_item_description">Description</string>
    <string name="drawer_item_taken_on_date">First Taken On</string>
    <string name="no_result">NO RESULT</string>
    <string name="no_realname">No Name</string>
    <string name="no_username">No Nick Name</string>
    <string name="no_location">No Location Info</string>
    <string name="no_description">No Description</string>
    <string name="no_joined_date">No joined date</string>
    <string name="no_taken_on_date">No taken date</string>
    <string name="no_date">No Date</string>
    <string name="view_more_photo">More photo</string>
    <string name="follow_condition">want to </string>
    <string name="grade_count">Grade</string>
    <string name="picture_count">Photo</string>
    <string name="follower_count">Follower</string>
    <string name="following_count">Following</string>
    <string name="pinned_count">Pinned Pix</string>
    <string name="gallery_count">Gallery</string>
    <string name="purchased_count">Purchased Photo</string>
    <string name="my_photo_count">My Photo</string>
    <string name="view_more_profile">View detailed profile</string>
    <string name="no_more_photo">No more photo</string>
    <string name="no_more_profile">No more profile</string>
    <string name="phrase_public">This photo is public</string>
    <string name="phrase_safe">This photo is safe</string>
    <string name="menu_search">Search</string>
    <string name="menu_call_search">Call Search</string>
    <string name="menu_call_setting">Setting</string>
    <string name="menu_profile">Info</string>
    <string name="menu_exif">EXIF</string>
    <string name="menu_location">Location</string>
    <string name="menu_share">Share</string>
    <string name="menu_photo_share">Photo Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_share_facebook">Facebook</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_view">View</string>
    <string name="menu_like_good">Favorite</string>
    <string name="menu_like_normal">Normal</string>
    <string name="menu_like_dislike">Unfavorite</string>
    <string name="menu_exif_model">Model</string>
    <string name="menu_exif_exposure">Exposure</string>
    <string name="menu_exif_aperture">Aperture</string>
    <string name="menu_exif_iso">ISO Speed</string>
    <string name="menu_exif_flash">Flash</string>
    <string name="menu_exif_whitebalance">White Balance</string>
    <string name="menu_exif_focallength">Focal Length</string>
    <string name="share_other">Others</string>
    <string name="phrase_title">Title</string>
    <string name="phrase_view_map">View Map</string>
    <string name="phrase_description">Description</string>
    <string name="phrase_client_wrong_request">sorry! There seems to be something wrong with the user request.</string>
    <string name="phrase_server_wrong_response">Sorry! There seems to be something wrong with the Searp server connection.</string>
    <string name="phrase_wallpaper_implement">The function of setting the wallpaper will be implemented.</string>
    <string name="phrase_view_category_implement">The function of viewing category"'"s photo will be implemented.</string>
    <string name="phrase_photo_upload_implement">The function of uploading the photo will be implemented.</string>
    <string name="phrase_save_photo">The photo was successfully saved.</string>
    <string name="phrase_same_photo_exist">A photo with the same name already exists.</string>
    <string name="phrase_same_keyword_exist">A keyword already exists.</string>
    <string name="phrase_fail_save_photo">Failed to save the photo.</string>
    <string name="phrase_fail_save_photo_exif">Failed to save the EXIF information.</string>
    <string name="phrase_fail_save_photo_photo_searper">Failed to save the searper information.</string>
    <string name="phrase_fail_save_photo_location">Failed to save the Location information.</string>
    <string name="phrase_no_general_photo">No photos</string>
    <string name="phrase_no_favorite_photo">No favorite photos</string>
    <string name="phrase_no_popular_photo">No popular photos</string>
    <string name="phrase_fail_save_search_keyword">Failed to save the search keyword.</string>
    <string name="phrase_delete_photo">The photo was successfully deleted.</string>
    <string name="phrase_fail_delete_photo">Failed to save the photo.</string>
    <string name="phrase_erase_cache">The cache was erased.</string>
    <string name="phrase_photo_exif">View Photo EXIF INFO</string>
    <string name="phrase_photo_location">View Photo Location INFO</string>
    <string name="phrase_photo_shot_location">View the location of a photo shoot</string>
    <string name="phrase_view_photo">View this photo</string>
    <string name="phrase_dialog_title_save">Save Photo</string>
    <string name="phrase_dialog_title_delete">Delete Photo</string>
    <string name="phrase_download">Do you want to download the photo?</string>
    <string name="phrase_delete">Do you want to delete the photo?</string>
    <string name="phrase_permission_cancel">Permission Cancelled!</string>
    <string name="phrase_recent_searches">Recent Searches</string>
    <string name="phrase_be_favorite_photo">Be your favorite!</string>
    <string name="phrase_views">Views</string>
    <string name="phrase_comments">Comments</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="setting_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="section_more">More Section</string>
    <string name="title_activity_maps">Location of a photo shoot</string>
    <string name="feed_view">Searp Photo View</string>
    <string name="drawer_item_comments">Comments</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="drawer_item_edit_profile">Edit Profile</string>
    <string name="drawer_item_follow">FOLLOW</string>
    <string name="drawer_item_searper_popular_photo_list">Pops Photo</string>
    <string name="drawer_item_searper_favorites_photo_list">Best Photo</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="other">Other</string>
    <string name="photo_safe">This photo is safe.</string>
    <string name="phrase_photos">photos</string>
    <string name="phrase_rewards">In Rewards</string>
    <string name="phrase_important_notice">중요한 사항</string>
    <string name="phrase_user_name_pinned_feeds">%1$s"'"s Pinned Pix</string>
    <string name="phrase_user_name_gallery">%1$s"'"s Gallery</string>
    <string name="phrase_home">Home</string>
    <string name="phrase_quest">Quest</string>
    <string name="phrase_feed">Feed</string>
    <string name="phrase_profile">Profile</string>
    <string name="phrase_rank">Rank</string>
    <string name="snap_item_view_all">VIEW&#160;ALL&#160;&#160;</string>
    <string name="snap_item_view_more_pix">MORE PIX</string>
    <string name="snap_item_view_more_catagories">MORE CATEGORIES&#160;&#160;</string>
    <string name="snap_item_view_ranking">VIEW RANKING&#160;&#160;</string>
    <string name="snap_popular_mission">Hot Quest</string>
    <string name="snap_searp_picks">Searp"'"s Picks</string>
    <string name="snap_home_main_hot_topic_photo_phrase">Today"'"s TIP!</string>
    <string name="snap_hot_photos">Hot Pix</string>
    <string name="snap_featured_searper"><![CDATA[<b><font color=#FFFFFF>Searper&#160;&#160;</font></b><b><font color=#FF7900>Rank</font></b>]]></string>
    <string name="snap_quest_duration_day_phrase">D<![CDATA[-]]> </string>
    <string name="home_quest_sort_latest_keyword">Latest</string>
    <string name="home_quest_sort_deadline_keyword">Deadline</string>
    <string name="home_quest_sort_prize_money_keyword">Prize money</string>
    <string name="home_quest_sort_all">모든 퀘스트 </string>
    <string name="home_quest_sort_on_going">진행중 </string>
    <string name="home_quest_sort_examination">심사중 </string>
    <string name="home_quest_sort_closed">종료 </string>
    <string name="phrase_category">Category</string>
    <string name="login_login_look_overview">Searp"'"s Overview</string>
    <string name="splash_title">Share the world you have seen\n and get special rewards.</string>
    <string name="facebook_app_id">310866589465901</string>
    <string name="fb_login_protocol_scheme">fb310866589465901</string>
    <string name="google_map_key">AIzaSyC6K6jlSA7IUZO4qpEKVeiGD0ZQU9mT56U</string>
    <string name="my_profile_tab_photos">My Gallery</string>
    <string name="my_profile_tab_sales">My Sales</string>
    <string name="sale_status_invalid">Invalid</string>
    <string name="sale_status_approved">Approved</string>
    <string name="sale_status_verifying">Verifying</string>
    <string name="profile_text_following">팔로잉</string>
    <string name="profile_text_follower">팔로워</string>
    <string name="profile_text_like">LIKE</string>
    <string name="profile_text_pinned">찜</string>
    <string name="profile_button_text_edit">프로필 수정</string>
    <string name="status_following">Following</string>
    <string name="status_follow">Follow</string>
    <string name="people_title_searper">SEARPER</string>
    <string name="people_title_searple">SEARPLE</string>
    <string name="people_title_like">LIKES</string>
    <string name="people_title_buyer">BUYER</string>
    <string name="my_photo_status_verifying">verifying</string>
    <string name="my_photo_status_approved">approved</string>
    <string name="my_photo_status_invalid">invalid</string>
    <string name="hot_topic">Hot Topic</string>
    <string name="ranking_tab_photo">Photo</string>
    <string name="ranking_tab_reward">Reward</string>
    <string name="ranking_tab_like">Like</string>
    <string name="tutorial">Tutorial</string>
    <string name="dollar_symbol">$</string>
    <string name="license">LICENSE</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="xl">XL</string>
    <string name="size">1230*460</string>
    <string name="by_symbol">*</string>
    <string name="price">12$</string>
    <string name="information">INFORMATION</string>
    <string name="place">PLACE</string>
    <string name="recommend">RECOMMEND</string>
    <string name="purchase">PURCHASE</string>
    <string name="space">&#160;</string>
    <string name="like">Likes</string>
    <string name="comment">Comments</string>
    <string name="license_buy_on_searp">This photo is sold only on the Searp Service Platform.</string>
    <string name="license_cc_by">This license lets others distribute, remix, tweak, and build upon your work, even commercially, as long as they credit you for the original creation.</string>
    <string name="license_cc_by_sa">This license lets others remix, tweak, and build upon your work even for commercial purposes, as long as they credit you and license their new creations under the identical terms.</string>
</resources>